2007-03-14 Yen-Ju Chen <yjchenx at gmail>

	* Fix ghost state after moving it to AZDockView.

2007-03-12 Yen-Ju Chen <yjchenx at gmail>

	* Make sure the icon is on top of normal window.
	* Use small triangle to indicate running application.
	* Make sure the mouse is released inside the dock.
	* Put Azalea into blacklist.

2007-03-03 Yen-Ju Chen <yjchenx at gmail>

	* Check GNUstep app icon and move it out of sight.

2007-03-01 Yen-Ju Chen <yjchenx at gmail>

	* Implement launching state with yellow backgroud.
	* Implement 'remove from dock' function.
	* Save docked applications.
	* Combine "keep in dock" and "remove from dock" menu.
	* Cache icon images for docked applications.

2007-02-28 Yen-Ju Chen <yjchenx at gmail>

	* Use NSWorkspace to track GNUstep applications
          and Azalea to track XWindow windows.
          Hope to make it more simple and stable.
	* Clean up and recover workspace switcher.

2006-12-17 Yen-Ju Chen <yjchenx at gmail>

	* Initial support for keeping application in dock.
	* Avoid crash if command is not found.
	* Fix firefox because it is under special directory.
	* Put etoile_system, EtoileMenuServer and AZBackground in blacklist.
	* Make sure icon is properly retained.
	* Avoid AZDock window through blacklist.
	* Fix bug of launching GNUstep application. 
          [NSWorkspace launchApplication:] does not always work.

2006-12-16 Yen-Ju Chen <yjchenx at gmail>

	* Avoid gnustep windows other than regular window, main menu and doc.
	* AZDock: Remove as much memory as possible.

2006-11-02 Yen-Ju Chen <yjchenx at gmail>

	* Link to CollectionKit.

2006-10-21 Yen-Ju Chen <yjchenx at gmail>

	* Split AZDockApp into AZXWindowApp and AZGNUstepApp.

2006-10-20 Yen-Ju Chen <yjchenx at gmail>

	* Properly handle workspaces if it starts before window manager.
	* Fix adding directories but not .app into recent applications.

2006-10-18 Yen-Ju Chen <yjchenx at gmail>

	* Move workspace switcher into its own submenu.